@@ -11,6 +11,8 @@ TODO
 
 New Features:
 
+- Changed form-list macros to use HTML table elements instead of div with
+  table styles
 - ArtifactHit and ArtifactHitBin timing fields are now number-decimal
   instead of number-integer to record sub-millisecond timing; internal
   changes for more precise timing, also calc of standard deviation, etc;
